Revision history for Ocsinventory::Agent

       * postinst.pl can now be launched in non-interactive mode using new "--nowizard" launch option
       * Adding all the configuration options as launching arguments in postinst.pl
       * Adding new interactive questions about "debug", "logfile", "ssl" and "ca" configuration options in postinst.pl
       * Download.pm uses LWP useragent initiated by Network.pm for SSL checks 
       * Download.pm uses LWP useragent initiated by Network.pm for info and frags files downloads
       * Network.pm can use LWP version 6 SSL useragent options
       * New --ca configuration option to specify a CA certificate path for SSL certificate checks 
       * New --ssl configuration option to enable/disable SSL certificate checks 
       * Customize SNMP scans using a special XML format received from server 
       * Getting network devices MAC address during SNMP scans
       * Availibity to scan any networks SNMP devices using nmap or ping scans
       * SNMP v3 available for SNMP scans
       * Add new --ssl configuration option to enable or disable certificate check during SSL communications
       * Change 'SERIAL' field name and add checksum for inventory XML CPUS section 
       * Now getting MANUFACTURER and SERIALNUMBER in Snmp/3375.pm
       * Add new fields in setSnmpLoadBalancer() method in Common.pm

2.0.x
       * Fix segfault and buffer overflow bugs in ipdiscover.c
       * Improve OCS MacOSX agent internationalization support
       * Back to previous pane after wrong OCS server address warning in MacOSX installer
       
2.0.4
       * Improve memory slots detection under MacOSX 10.7 in MacOS/Mem.pm
       * Force OCSNG.app to become the topmost window in tools/macosx/ocsng_app-xcode/main.m
       * Fix Bug #901570 about wrong printer name if no printer found in MacOS/Printers.pm
       * Solving CPU and memories inventory detection under MacOSX Snow Leopard and MacOSX Lion